the correction done

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-8   hero-text">
                 <h6 class="hero_title">Hi, This is Rajesh Anuragi</h6>
-                <p class="hero_desc">I am a Full stack Devloper in Himachal Pradesh</p>
+                <p class="hero_desc">I am a Full stack Developer in Himachal Pradesh</p>
             </div>
             </div>  
         </div>
@@ -69,13 +69,13 @@
                 </div>
 
                 <div class="col-lg-8 mt-7">
-                    <h6> Hey there, my name is Rajesh Anuragi. I have done my schooling from <a href="https://www.nios.ac.in/online-course-material/sr-secondary-courses/english-(302).aspx">NIOS</a>(National Institute of open Schooling) and one and half years of computer programing Course from <a href="https://www.navgurukul.org/">Navgurukul</a>. There i learnt and practice various fronted and backend tecnologies like Python, HTML, CSS, JavaScript, TypeScript, React, Node js and Express Js. DataBases: like MYSQL, Postgress, and their respective ORMS Prisma and Sequlize. Below in the projects section are the some projects I have worked on. Please do check them.
+                    <h6> Hey there, my name is Rajesh Anuragi. I have done my schooling from <a href="https://www.nios.ac.in/online-course-material/sr-secondary-courses/english-(302).aspx">NIOS</a>(National Institute of open Schooling) and one and half years of Computer Programing Course from <a href="https://www.navgurukul.org/">Navgurukul</a>. There I learnt and practice various Fronted and Backend tecnologies like Python, HTML, CSS, JavaScript, TypeScript, React, Node js and Express Js. DataBases: like MYSQL, PostgreSQL, and their respective ORMS, like Prisma, Sequlize. Below in the projects section are the some projects I have worked on. Please do check them.
                     </h6>
                   
                     <div class="row mt-3">
                         <h6> 
-                            Prtesent as on November 2022 I have six months of experience with Angular 13 At <a href="
-                            http://gladhandtechnologies.com">Gladhand Technologies</a>. My primary role is to improve the UI and work on the respactive tasks related to UI issues given everday.
+                            Present as on November 2022 I have six months of experience with Angular 13 At <a href="
+                            http://gladhandtechnologies.com">Gladhand Technologies</a>. My primary role is to improve the UI and work on the respective tasks related to UI issues given everyday.
                         </h6>
                     </div>
                 </div>
