corrected the spelling error

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav  class="navbar navbar-expand-lg fixed-top navbarScroll ">
         <div class="container ">
-           <h2 > <a class="navbar-brand" href="#">DEVLOPER</a></h2>
+           <h2 > <a class="navbar-brand" href="#">DEVELOPER</a></h2>
             <button class="navbar-toggler menu" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 
                 <img src="./assets/menu-icon-19350.png" alt="menuIcon">
