--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-8   hero-text">
                 <h6 class="hero_title">Hi, This is Rajesh Anuragi</h6>
-                <p class="hero_desc">I am a Full stack Developer in Himachal Pradesh</p>
+                <p class="hero_desc">I am a Full stack Developer in India</p>
             </div>
             </div>  
         </div>
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="col-lg-8 mt-7">
-                    <h6> Hey there, my name is Rajesh Anuragi. I have done my schooling from <a href="https://www.nios.ac.in/online-course-material/sr-secondary-courses/english-(302).aspx">NIOS</a>(National Institute of open Schooling) and one and half years of Computer Programing Course from <a href="https://www.navgurukul.org/">Navgurukul</a>. There I learnt and practice various Fronted and Backend tecnologies like Python, HTML, CSS, JavaScript, TypeScript, React, Node js and Express Js. DataBases: like MYSQL, PostgreSQL, and their respective ORMS, like Prisma, Sequlize. Below in the projects section are the some projects I have worked on. Please do check them.
+                    <h6> Hey there, my name is Rajesh Anuragi. I have done my schooling from <a href="https://www.nios.ac.in/online-course-material/sr-secondary-courses/english-(302).aspx">NIOS</a>(National Institute of open Schooling) and one and half years of Computer Programming Course from <a href="https://www.navgurukul.org/">Navgurukul</a>. There I learnt and practiced various Fronted and Backend tecnologies like HTML, CSS, JavaScript, TypeScript, React, Node js, Express Js, and Python, DataBases: like MYSQL, PostgreSQL, and their respective ORMS, like Prisma, Sequlize. Below in the projects section are some projects I have worked on. Please do check them.
                     </h6>
                   
                     <div class="row mt-3">
