another spelling error

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
                 </div>
 
                 <div class="col-lg-8 mt-7">
-                    <h6> Hey there, my name is Rajesh Anuragi. I have done my schooling from <a href="https://www.nios.ac.in/online-course-material/sr-secondary-courses/english-(302).aspx">NIOS</a>(National Institute of open Schooling) and one and half years of Computer Programming Course from <a href="https://www.navgurukul.org/">Navgurukul</a>. There I learnt and practiced various Fronted and Backend tecnologies like HTML, CSS, JavaScript, TypeScript, React, Node js, Express Js, and Python, DataBases: like MYSQL, PostgreSQL, and their respective ORMS, like Prisma, Sequlize. Below in the projects section are some projects I have worked on. Please do check them.
+                    <h6> Hey there, my name is Rajesh Anuragi. I have done my schooling from <a href="https://www.nios.ac.in/online-course-material/sr-secondary-courses/english-(302).aspx">NIOS</a>(National Institute of open Schooling) and one and half years of Computer Programming Course from <a href="https://www.navgurukul.org/">Navgurukul</a>. There I learnt and practiced various Fronted and Backend technologies like HTML, CSS, JavaScript, TypeScript, React, Node js, Express Js, and Python, DataBases: like MYSQL, PostgreSQL, and their respective ORMS, like Prisma, Sequlize. Below in the projects section are some projects I have worked on. Please do check them.
                     </h6>
                   
                     <div class="row mt-3">
                         <h6> 
-                            Present as on November 2022 I have six months of experience with Angular 13 At <a href="
-                            http://gladhandtechnologies.com">Gladhand Technologies</a>. My primary role is to improve the UI and work on the respective tasks related to UI issues given everyday.
+                            Present as on November 2022 I have six months of experience with Angular 9 and 13 At <a href="
+                            http://gladhandtechnologies.com">Gladhand Technologies</a>. My primary role is to improve the UI, required features and work on the UI issues observed.
                         </h6>
                     </div>
                 </div>
